bindings/c/pnf_c.hpp

/// \brief Opaque chart handle.
    typedef struct PnfChart PnfChart;
/// \brief Opaque indicators handle.
    typedef struct PnfIndicators PnfIndicators;
/// \brief Opaque viewer handle.
    typedef struct PnfViewer PnfViewer;
/// \brief Box type enumeration.
    typedef enum {
        PNF_BOX_X = 0,
        PNF_BOX_O = 1
    } PnfBoxType;
/// \brief Column type enumeration.
    typedef enum {
        PNF_COLUMN_X = 0,
        PNF_COLUMN_O = 1,
        PNF_COLUMN_MIXED = 2
    } PnfColumnType;
/// \brief Construction method enumeration.
    typedef enum {
        PNF_METHOD_CLOSE = 0,
        PNF_METHOD_HIGH_LOW = 1
    } PnfConstructionMethod;
/// \brief Box size method enumeration.
    typedef enum {
        PNF_BOX_SIZE_FIXED = 0,
        PNF_BOX_SIZE_TRADITIONAL = 1,
        PNF_BOX_SIZE_PERCENTAGE = 2,
        PNF_BOX_SIZE_POINTS = 3
    } PnfBoxSizeMethod;
/// \brief Signal type enumeration.
    typedef enum {
        PNF_SIGNAL_NONE = 0,
        PNF_SIGNAL_BUY = 1,
        PNF_SIGNAL_SELL = 2
    } PnfSignalType;
/// \brief Pattern type enumeration.
    typedef enum {
        PNF_PATTERN_NONE = 0,
        PNF_PATTERN_DOUBLE_TOP_BREAKOUT,
        PNF_PATTERN_DOUBLE_BOTTOM_BREAKDOWN,
        PNF_PATTERN_TRIPLE_TOP_BREAKOUT,
        PNF_PATTERN_TRIPLE_BOTTOM_BREAKDOWN,
        PNF_PATTERN_QUADRUPLE_TOP_BREAKOUT,
        PNF_PATTERN_QUADRUPLE_BOTTOM_BREAKDOWN,
        PNF_PATTERN_ASCENDING_TRIPLE_TOP,
        PNF_PATTERN_DESCENDING_TRIPLE_BOTTOM,
        PNF_PATTERN_BULLISH_CATAPULT,
        PNF_PATTERN_BEARISH_CATAPULT,
        PNF_PATTERN_BULLISH_SIGNAL_REVERSED,
        PNF_PATTERN_BEARISH_SIGNAL_REVERSED,
        PNF_PATTERN_BULLISH_TRIANGLE,
        PNF_PATTERN_BEARISH_TRIANGLE,
        PNF_PATTERN_LONG_TAIL_DOWN,
        PNF_PATTERN_HIGH_POLE,
        PNF_PATTERN_LOW_POLE,
        PNF_PATTERN_BULL_TRAP,
        PNF_PATTERN_BEAR_TRAP,
        PNF_PATTERN_SPREAD_TRIPLE_TOP,
        PNF_PATTERN_SPREAD_TRIPLE_BOTTOM
    } PnfPatternType;
/// \brief Chart configuration parameters.
    typedef struct {
        PnfConstructionMethod method;
        PnfBoxSizeMethod box_size_method;
        double box_size;
        int reversal;
    } PnfChartConfig;
/// \brief Indicator configuration parameters.
    typedef struct {
        int sma_short_period;
        int sma_medium_period;
        int sma_long_period;
        int bollinger_period;
        double bollinger_std_devs;
        int rsi_period;
        double rsi_overbought;
        double rsi_oversold;
        double bullish_alert_threshold;
        double bearish_alert_threshold;
        double support_resistance_threshold;
        int congestion_min_columns;
        double congestion_price_range;
    } PnfIndicatorConfig;
/// \brief PnfOHLC.
    typedef struct {
        int64_t timestamp;
        double open;
        double high;
        double low;
        double close;
        double volume;
    } PnfOHLC;
/// \brief PnfSignal.
    typedef struct {
        PnfSignalType type;
        int column_index;
        double price;
    } PnfSignal;
/// \brief PnfPattern.
    typedef struct {
        PnfPatternType type;
        int start_column;
        int end_column;
        double price;
        bool is_bullish;
    } PnfPattern;
/// \brief PnfSupportResistanceLevel.
    typedef struct {
        double price;
        int touch_count;
        bool is_support;
    } PnfSupportResistanceLevel;
/// \brief PnfColumnData.
    typedef struct {
        int index;
        PnfColumnType type;
        double high;
        double low;
        int box_count;
    } PnfColumnData;
/// \brief PnfDoubleArray.
    typedef struct {
        double* data;
        size_t length;
    } PnfDoubleArray;
/// \brief PnfSignalArray.
    typedef struct {
        PnfSignal* data;
        size_t length;
    } PnfSignalArray;
/// \brief PnfPatternArray.
    typedef struct {
        PnfPattern* data;
        size_t length;
    } PnfPatternArray;
/// \brief PnfLevelArray.
    typedef struct {
        PnfSupportResistanceLevel* data;
        size_t length;
    } PnfLevelArray;
    // Version
/// \brief Version string.
    /// \return 
    PNF_API const char* pnf_version_string(void);
/// \brief Version major.
    /// \return 
    PNF_API int pnf_version_major(void);
/// \brief Version minor.
    /// \return 
    PNF_API int pnf_version_minor(void);
/// \brief Version patch.
    /// \return 
    PNF_API int pnf_version_patch(void);
    // Chart config helpers
/// \brief Chart config default.
    /// \return 
    PNF_API PnfChartConfig pnf_chart_config_default(void);
/// \brief Indicator config default.
    /// \return 
    PNF_API PnfIndicatorConfig pnf_indicator_config_default(void);
    // Chart creation/destruction
/// \brief Chart create.
    /// \param config 
    /// \return 
    PNF_API PnfChart* pnf_chart_create(const PnfChartConfig* config);
/// \brief Chart create default.
    /// \return 
    PNF_API PnfChart* pnf_chart_create_default(void);
/// \brief Chart destroy.
    /// \param chart 
    PNF_API void pnf_chart_destroy(PnfChart* chart);
    // Data input
/// \brief Chart add data.
    /// \param chart 
    /// \param high 
    /// \param low 
    /// \param close 
    /// \param timestamp 
    /// \return 
    PNF_API bool pnf_chart_add_data(PnfChart* chart, double high, double low, double close, int64_t timestamp);
/// \brief Chart add price.
    /// \param chart 
    /// \param price 
    /// \param timestamp 
    /// \return 
    PNF_API bool pnf_chart_add_price(PnfChart* chart, double price, int64_t timestamp);
/// \brief Chart add ohlc.
    /// \param chart 
    /// \param ohlc 
    /// \return 
    PNF_API bool pnf_chart_add_ohlc(PnfChart* chart, const PnfOHLC* ohlc);
    // Chart info
/// \brief Chart column count.
    /// \param chart 
    /// \return 
    PNF_API size_t pnf_chart_column_count(const PnfChart* chart);
/// \brief Chart x column count.
    /// \param chart 
    /// \return 
    PNF_API size_t pnf_chart_x_column_count(const PnfChart* chart);
/// \brief Chart o column count.
    /// \param chart 
    /// \return 
    PNF_API size_t pnf_chart_o_column_count(const PnfChart* chart);
/// \brief Chart box size.
    /// \param chart 
    /// \return 
    PNF_API double pnf_chart_box_size(const PnfChart* chart);
    // Column info
/// \brief Chart column type.
    /// \param chart 
    /// \param index 
    /// \return 
    PNF_API PnfColumnType pnf_chart_column_type(const PnfChart* chart, size_t index);
/// \brief Chart column box count.
    /// \param chart 
    /// \param index 
    /// \return 
    PNF_API size_t pnf_chart_column_box_count(const PnfChart* chart, size_t index);
/// \brief Chart column highest.
    /// \param chart 
    /// \param index 
    /// \return 
    PNF_API double pnf_chart_column_highest(const PnfChart* chart, size_t index);
/// \brief Chart column lowest.
    /// \param chart 
    /// \param index 
    /// \return 
    PNF_API double pnf_chart_column_lowest(const PnfChart* chart, size_t index);
    // Box info
/// \brief Chart box price.
    /// \param chart 
    /// \param col_index 
    /// \param box_index 
    /// \return 
    PNF_API double pnf_chart_box_price(const PnfChart* chart, size_t col_index, size_t box_index);
/// \brief Chart box type.
    /// \param chart 
    /// \param col_index 
    /// \param box_index 
    /// \return 
    PNF_API PnfBoxType pnf_chart_box_type(const PnfChart* chart, size_t col_index, size_t box_index);
/// \brief Chart box marker.
    /// \param chart 
    /// \param col_index 
    /// \param box_index 
    /// \return 
    PNF_API const char* pnf_chart_box_marker(const PnfChart* chart, size_t col_index, size_t box_index);
    // Trend analysis
/// \brief Chart has bullish bias.
    /// \param chart 
    /// \return 
    PNF_API bool pnf_chart_has_bullish_bias(const PnfChart* chart);
/// \brief Chart has bearish bias.
    /// \param chart 
    /// \return 
    PNF_API bool pnf_chart_has_bearish_bias(const PnfChart* chart);
/// \brief Chart is above bullish support.
    /// \param chart 
    /// \param price 
    /// \return 
    PNF_API bool pnf_chart_is_above_bullish_support(const PnfChart* chart, double price);
/// \brief Chart is below bearish resistance.
    /// \param chart 
    /// \param price 
    /// \return 
    PNF_API bool pnf_chart_is_below_bearish_resistance(const PnfChart* chart, double price);
    // Clear and utility
/// \brief Chart clear.
    /// \param chart 
    PNF_API void pnf_chart_clear(PnfChart* chart);
/// \brief Chart to string.
    /// \param chart 
    /// \return 
    PNF_API const char* pnf_chart_to_string(const PnfChart* chart);
/// \brief Chart to ascii.
    /// \param chart 
    /// \return 
    PNF_API const char* pnf_chart_to_ascii(const PnfChart* chart);
/// \brief Chart to json.
    /// \param chart 
    /// \return 
    PNF_API const char* pnf_chart_to_json(const PnfChart* chart);
    // Indicators creation/destruction
/// \brief Indicators create.
    /// \return 
    PNF_API PnfIndicators* pnf_indicators_create(void);
/// \brief Indicators create default.
    /// \return 
    PNF_API PnfIndicators* pnf_indicators_create_default(void);
/// \brief Indicators create with config.
    /// \param config 
    /// \return 
    PNF_API PnfIndicators* pnf_indicators_create_with_config(const PnfIndicatorConfig* config);
/// \brief Indicators destroy.
    /// \param indicators 
    PNF_API void pnf_indicators_destroy(PnfIndicators* indicators);